--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "express": "^4.19.2",
         "nodemon": "^3.1.1",
-        "pug": "^3.0.3"
+        "pug": "^3.0.3",
+        "sqlite3": "^5.1.7"
     }
 }
